# rainmeter-lhws

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: build-release-x64.ps1  build-release-x86.ps1  build.ps1
src/: API.cpp  API.h  BackgroundTimer.h  CMakeLists.txt  Constants.h  Measure.cpp  Measure.h  Plugin.cpp  RtssAppStat.cpp  RtssAppStat.h  pch.h
